# simple_moveit2_universal_robots_movement

./: CMakeLists.txt  package.xml
launch/: basic_move.py  hello_moveit_ur_launch.py
src/: basic_move.cpp  collision_objects.cpp  collision_objects.hpp  hello_moveit_ur.cpp  static_pos.cpp  static_pos.hpp
