<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_move</name>
  <version>0.0.0</version>
  <description>MoveIt! package for controlling UR robot arm</description>
  <maintainer email="luca@todo.todo">luca</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>ros_ur_driver</depend>  <!-- Fixed incorrect driver name -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>graph_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>



  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
